--- a/index.html
+++ b/index.html
@@ -81,11 +81,7 @@
    <!-- 6:00 a.m. -->
    <tr>
       <th scope="row">6:00 a.m.</th>
-      <td rowspan="3">Dawn Air</td>
-      <td rowspan="3">Dawn Air</td>
-      <td rowspan="3">Dawn Air</td>
-      <td rowspan="3">Dawn Air</td>
-      <td rowspan="3">Dawn Air</td>
+      <td colspan="5" rowspan="3">Dawn Air</td>
       <td rowspan="3">Dawn Air Weekends</td>
       <td rowspan="2">Sunday Magazine</td>
    </tr>
@@ -104,11 +100,7 @@
    <!-- 7:30 a.m. -->
    <tr>
       <th scope="row">7:30 a.m.</th>
-      <td>Local News</td>
-      <td>Local News</td>
-      <td>Local News</td>
-      <td>Local News</td>
-      <td>Local News</td>
+      <td colspan="5">Local News</td>
       <td rowspan="2">Weekend Wrap</td>
       <td rowspan="2">Radio U</td>
    </tr>
@@ -116,33 +108,21 @@
    <!-- 8:00 a.m. -->
    <tr>
       <th scope="row">8:00 a.m.</th>
-      <td>World News Feed</td>
-      <td>World News Feed</td>
-      <td>World News Feed</td>
-      <td>World News Feed</td>
-      <td>World News Feed</td>
+      <td colspan="5">World News Feed</td>
       <td rowspan="2">What Can You Say?</td>
    </tr>
 
    <!-- 8:30 a.m. -->
    <tr>
       <th scope="row">8:30 a.m.</th>
-      <td>Classical Roots</td>
-      <td>Classical Roots</td>
-      <td>Classical Roots</td>
-      <td>Classical Roots</td>
-      <td>Classical Roots</td>
+      <td colspan="5">Classical Roots</td>
       <td rowspan="2">University on the Air</td>
    </tr>
 
    <!-- 9:00 a.m. -->
    <tr>
       <th scope="row">9:00 a.m.</th>
-      <td rowspan="2">Symphony City</td>
-      <td rowspan="2">Symphony City</td>
-      <td rowspan="2">Symphony City</td>
-      <td rowspan="2">Symphony City</td>
-      <td rowspan="2">Symphony City</td>
+      <td colspan="5" rowspan="2">Symphony City</td>
       <td rowspan="2">Animal Talk</td>
       <td rowspan="2">Word Play</td>
    </tr>
@@ -155,8 +135,7 @@
    <!-- 10:00 a.m. -->
    <tr>
       <th scope="row">10:00 a.m.</th>
-      <td rowspan="2">Opera Live from the East Coast</td>
-      <td rowspan="2">Opera Live from the East Coast</td>
+      <td colspan="2" rowspan="2">Opera Live from the East Coast</td>
       <td rowspan="2">Brain Stew</td>
    </tr>
 
@@ -174,12 +153,7 @@
    <!-- 11:30 a.m. -->
    <tr>
       <th scope="row">11:30 a.m.</th>
-      <td rowspan="2">Book Club</td>
-      <td rowspan="2">Book Club</td>
-      <td rowspan="2">Book Club</td>
-      <td rowspan="2">Book Club</td>
-      <td rowspan="2">Book Club</td>
-      <td rowspan="2">Book Club</td>
+      <td colspan="5" rowspan="2">Book Club</td>
       <td rowspan="2">Grammar Rules!!</td>
    </tr>
 
@@ -189,6 +163,7 @@
       <td>Weekend Wrap</td>
    </tr>
 </tbody>
+
 
          </table>
       </section>
