--- a/index.html
+++ b/index.html
@@ -77,94 +77,125 @@
                </tr>
             </tfoot>
 
-            <tbody>
+   <tbody>
+   <!-- 5:00 a.m. ---------------------------------------------------------- -->
+   <tr>
+      <th scope="row">5:00 a.m.</th>
+      <!-- Mon-Fri -->
+      <td colspan="5" rowspan="4">Dawn Air</td>
+      <!-- Saturday -->
+      <td rowspan="4">Dawn Air Weekends</td>
+      <!-- Sunday -->
+      <td>Sunday Magazine</td>
+   </tr>
+
+   <!-- 5:30 a.m. -->
+   <tr>
+      <th scope="row">5:30 a.m.</th>
+      <td></td>
+   </tr>
+
    <!-- 6:00 a.m. -->
    <tr>
       <th scope="row">6:00 a.m.</th>
-      <td colspan="5" rowspan="3">Dawn Air</td>
-      <td rowspan="3">Dawn Air Weekends</td>
-      <td rowspan="2">Sunday Magazine</td>
+      <td></td>
    </tr>
 
    <!-- 6:30 a.m. -->
    <tr>
       <th scope="row">6:30 a.m.</th>
+      <td>Weekend Reflections</td>
    </tr>
 
-   <!-- 7:00 a.m. -->
+   <!-- 7:00 a.m. ---------------------------------------------------------- -->
    <tr>
       <th scope="row">7:00 a.m.</th>
-      <td rowspan="2">Weekend Reflections</td>
+      <td colspan="5">Local News</td>
+      <td>Weekend Wrap</td>
+      <td></td>
    </tr>
 
    <!-- 7:30 a.m. -->
    <tr>
       <th scope="row">7:30 a.m.</th>
-      <td colspan="5">Local News</td>
-      <td rowspan="2">Weekend Wrap</td>
-      <td rowspan="2">Radio U</td>
+      <td colspan="5">World News Feed</td>
+      <td></td>
+      <td>Radio&nbsp;U</td>
    </tr>
 
    <!-- 8:00 a.m. -->
    <tr>
       <th scope="row">8:00 a.m.</th>
-      <td colspan="5">World News Feed</td>
-      <td rowspan="2">What Can You Say?</td>
+      <td colspan="5">Classical Roots</td>
+      <td>What Can You Say?</td>
+      <td>University on the Air</td>
    </tr>
 
-   <!-- 8:30 a.m. -->
+   <!-- 8:30 a.m. (blank across) -->
    <tr>
       <th scope="row">8:30 a.m.</th>
-      <td colspan="5">Classical Roots</td>
-      <td rowspan="2">University on the Air</td>
+      <td colspan="5"></td>
+      <td></td>
+      <td></td>
    </tr>
 
-   <!-- 9:00 a.m. -->
+   <!-- 9:00 a.m. (blank across) -->
    <tr>
       <th scope="row">9:00 a.m.</th>
-      <td colspan="5" rowspan="2">Symphony City</td>
-      <td rowspan="2">Animal Talk</td>
-      <td rowspan="2">Word Play</td>
+      <td colspan="5"></td>
+      <td></td>
+      <td></td>
    </tr>
 
    <!-- 9:30 a.m. -->
    <tr>
       <th scope="row">9:30 a.m.</th>
+      <td colspan="5"></td>
+      <td>Animal Talk</td>
+      <td></td>
    </tr>
 
-   <!-- 10:00 a.m. -->
+   <!-- 10:00 a.m. --------------------------------------------------------- -->
    <tr>
       <th scope="row">10:00 a.m.</th>
-      <td colspan="2" rowspan="2">Opera Live from the East Coast</td>
-      <td rowspan="2">Brain Stew</td>
+      <td colspan="5">Symphony City</td>
+      <td></td>
+      <td>Word Play</td>
    </tr>
 
    <!-- 10:30 a.m. -->
    <tr>
       <th scope="row">10:30 a.m.</th>
+      <td colspan="5"></td>
+      <td></td>
+      <td>Brain Stew</td>
    </tr>
 
    <!-- 11:00 a.m. -->
    <tr>
       <th scope="row">11:00 a.m.</th>
-      <td rowspan="2">The Inner Mind</td>
+      <td colspan="5"></td>
+      <td rowspan="2">Opera Live from the East Coast</td>
+      <td>The Inner Mind</td>
    </tr>
 
    <!-- 11:30 a.m. -->
    <tr>
       <th scope="row">11:30 a.m.</th>
-      <td colspan="5" rowspan="2">Book Club</td>
-      <td rowspan="2">Grammar Rules!!</td>
+      <td colspan="5"></td>
+      <!-- Saturday cell is row-spanned -->
+      <td>Grammar Rules!!</td>
    </tr>
 
-   <!-- 12:00 p.m. -->
+   <!-- 12:00 p.m. --------------------------------------------------------- -->
    <tr>
       <th scope="row">12:00 p.m.</th>
+      <td colspan="5">Book Club</td>
+      <td></td>
       <td>Weekend Wrap</td>
    </tr>
 </tbody>
-
-
+         
          </table>
       </section>
    </div>
